[MP-693,694] [Marketplace] add field store_uid and endpoint rating-summary...
